refactor find books by title
