# src/main/java/com/example/simplelibrary/exceptions/handlers/GlobalExceptionHandler.java
@@ -12,8 +12,6 @@ import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 import org.springframework.web.method.annotation.MethodArgumentTypeMismatchException;
 
-import java.util.List;
-
 @RestControllerAdvice
 public class GlobalExceptionHandler {
 
@@ -35,14 +33,11 @@ public class GlobalExceptionHandler {
 
     @ExceptionHandler(MethodArgumentTypeMismatchException.class)
     @ResponseStatus(HttpStatus.BAD_REQUEST)
-    public ResponseEntity<ErrorDto> handleMethodArgumentTypeMismatchException(MethodArgumentTypeMismatchException ex) {
+    public ResponseEntity<ErrorDto> handleMethodArgumentTypeMismatchException() {
         return ResponseEntity.badRequest().body(
                 ErrorDto.builder()
-                        .message(ErrorMessages.VALIDATION_ERROR)
+                        .message(ErrorMessages.INVALID_PATH_PARAMETER)
                         .status(HttpStatus.BAD_REQUEST.name())
-                        .errors(List.of(
-                                new FieldErrorDto(ex.getName(), ErrorMessages.INVALID_UUID)
-                        ))
                         .build()
         );
     }
